welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:7: error: forward reference extends over definition of variable baggle
		baggle = baggle+1
                ^